--- a/_posts/2021-06-16-about-me.markdown
+++ b/_posts/2021-06-16-about-me.markdown
@@ -8,7 +8,7 @@ redirect_from: https://novimatrem.gitlab.io/blog/2021-06-16-about-me.html
 redirect_to:  https://novimatrem.gitlab.io/blog/about
 date:   2021-06-16 04:38:00 +0000
 ---
-<!DOCTYPE html>
+If you are not redirected automatically, follow this [https://novimatrem.gitlab.io/blog/about](https://novimatrem.gitlab.io/blog/about) link to novimatrem.gitlab.io/blog/about
 <html lang="en">
 <head>
 	<meta charset="utf-8">
