--- a/_posts/2021-06-16-about-me.markdown
+++ b/_posts/2021-06-16-about-me.markdown
@@ -15,14 +15,14 @@ If you are not redirected automatically, follow this [https://novimatrem.gitlab.
 	<title>About | Novimatrem - Blog</title>
 	 <link rel="canonical" href="https://novimatrem.uk/blog/about">
 	<!--[if IE]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 	
 	<!-- i got a domain, so, this is needed to redirect, because gitlab pages is weird.. -->
 <script type="text/javascript">
 console.log("trying to redirect to new new")
 if (window.location.hostname == 'novimatrem.gitlab.io') {
-   window.location.replace("http://novimatrem.uk/blog/about"); 
+   window.location.replace("https://novimatrem.uk/blog/about"); 
 }
 </script>
 
