--- a/_posts/2023-05-05-post1.markdown
+++ b/_posts/2023-05-05-post1.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Post"
+title:  "Laters"
 date:   2023-05-05 23:00:00 +0000
 ---
 #### by Novimatrem (@novimatrem@iviv.hu)
