--- a/_posts/2023-03-15-gendergp-1.markdown
+++ b/_posts/2023-03-15-gendergp-1.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "A mild apology, some insight, perhaps a warning (or: my initial experiences with GenderGP)"
 date:   2023-03-15 15:30:00 +0000
 ---
-#### by Novimatrem (@novimatrem@iviv.hu)
+#### by zoey Whitehat (novimatrem.uk)
 *Released: 15/Mar/2023 at 03:30PM*
 
 Sorry if I'm not quite myself, or too positive right now- they're (GenderGP) are really screwing me around with access to my hormones, both happening now, happening in the next few months, and happening in 9 months time, so, it's just not a good time for me at the moment and I hope I can get it resolved. They seem to spring up previously un-mentioned required meetings out of nowhere, and previously un-required blood tests that I have to now do, apparently. I've tried to contest this via emails because the pathway I chose only required 6 monthly meetings, and didn't require blood tests, as none of this was mentioned prior, but, we'll have to see how it goes.. and then on top of that they'd probably make me pay again for the prescription I've already paid for..
