--- a/_posts/2023-04-28-post.markdown
+++ b/_posts/2023-04-28-post.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "I’m strongly considering taking a notably reduced presence from public forms of social media effective immediately."
 date:   2023-04-28 13:55:00 +0000
 ---
-#### by zoey Whitehat (novimatrem.uk)
+#### by zoey Globe (novimatrem.uk)
 *Released: 28/Apr/2023*
 
 I’m strongly considering taking a notably reduced presence from public forms of social media effective immediately.
