--- a/_posts/2023-05-05-post1.markdown
+++ b/_posts/2023-05-05-post1.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "Laters"
 date:   2023-05-05 23:00:00 +0000
 ---
-#### by zoey Whitehat (novimatrem.uk)
+#### by zoey Globe (novimatrem.uk)
 *Released: 05/May/2023*
 
 <div style="background-color:black;">
